fix(service): use 'su -c getevent -q' + raw protocol parsing
- Runtime.exec({'su','-c','getevent -q 2>/dev/null'}) instead of stdin pipe
  • fixes Magisk su closing the session on stdin EOF before getevent starts
- Parse raw hex protocol (' 0001 0072 ...') instead of -l labels
  • works regardless of toybox/busybox getevent version on ColorOS
- Drain stderr on a separate thread to avoid pipe-buffer deadlock
- Listen to all /dev/input/event* (no fixed node) — adapts to OnePlus event renumbering
- 500ms double-tap window per spec