@@ -22,28 +22,40 @@ import androidx.annotation.Nullable;
 
 import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
  * 后台常驻 Service —— 整个 "按键触发 → 截屏 → AI → 隐藏呈现" 链路的大脑。
- * <p>
- * <b>v2 关键改动：</b>
+ *
+ * <h2>按键监听架构（v3）</h2>
+ *
+ * 通过 {@code Runtime.exec(new String[]{"su", "-c", "getevent -q"})} 启动一个
+ * root shell 常驻子进程，让内核 input 子系统把硬件事件以 raw 协议格式
+ * （十六进制 type/code/value）打到 stdout：
+ *
+ * <pre>
+ *   /dev/input/event4: 0001 0072 00000001     # KEY_VOLUMEDOWN 按下
+ *   /dev/input/event4: 0001 0072 00000000     # KEY_VOLUMEDOWN 抬起
+ *   /dev/input/event5: 0001 0072 00000001     # 同一物理按键可能在多个 event 节点上报
+ * </pre>
+ *
+ * <p>两条关键修正：</p>
  * <ol>
- *   <li>按键监听从 {@code onKeyDown}（依赖窗口焦点）改为：<b>root 跑 {@code getevent}
- *       直接读 {@code /dev/input/event*}</b>，无论 Activity 是否在前台、是否被全屏独占，
- *       只要 Linux 内核能收到硬件中断就能识别手势。</li>
- *   <li>截图路径从 {@code /data/local/tmp/} 改为 App 私有 cache 目录，并通过
- *       {@code chmod 666} 解决 SELinux 标签问题。</li>
- *   <li>API 配置从 {@link AiVisionClient} 内部 setter 改为
- *       {@link ConfigStore}（SharedPreferences），每次请求实时读取。</li>
+ *   <li>不再 {@code ProcessBuilder("su")} 然后写 stdin —— Magisk 的 su
+ *       在 stdin 关闭时会话立刻结束，{@code getevent} 来不及起来。改用
+ *       {@code su -c "..."} 让命令绑定到 su 的整个生命周期。</li>
+ *   <li>不再依赖 {@code getevent -l} 输出标签名 —— ColorOS / 部分 ROM 的
+ *       toybox getevent 在 root 进程下输出格式不稳。直接用 raw 协议解析，
+ *       即 {@code " 0001 0072 ..."} 这种固定格式（hex 形式 / 短形式都覆盖）。</li>
  * </ol>
- * <p>
- * 触发手势：连续按 2 次音量减键（间隔 ≤ {@link #TRIGGER_WINDOW_MS} ms）。
- * 之所以选 2 次而不是 3 次，是因为底层事件流里 1 次按键会产生 DOWN + UP 两条事件，
- * 用 2 次按键（4 条事件）作为一次完整手势既不容易误触也不容易漏触。
+ *
+ * <p>全局监听 {@code /dev/input/event*}（不给 getevent 传具体设备路径），
+ * 因此不锁死具体 event 节点，适配一加 Pad Pro 上节点编号变化的情况。</p>
+ *
+ * <p>触发手势：500ms 内连续按 2 次音量减（type=0x0001, code=0x0072, value≠0）。</p>
  */
 public class BackgroundAssistService extends Service {
 
@@ -52,7 +64,7 @@ public class BackgroundAssistService extends Service {
     public static final String ACTION_TRIGGER = "com.xq.xxt.ai.TRIGGER";
 
     /** 两次音量减之间的最大间隔（ms） */
-    private static final long TRIGGER_WINDOW_MS = 1_200L;
+    private static final long TRIGGER_WINDOW_MS = 500L;
 
     /** 短答案阈值：超过这个长度走通知栏 */
     private static final int SHORT_ANSWER_THRESHOLD = 60;
@@ -64,9 +76,16 @@ public class BackgroundAssistService extends Service {
     /** 截图文件名（放到 App 私有 cache 目录） */
     private static final String SCREENSHOT_NAME = "screenshot.png";
 
-    /** {@code getevent} 输出里要监听的关键字 */
-    private static final String KEY_NAME = "KEY_VOLUMEDOWN";
-    private static final String DOWN_TOKEN = "DOWN";
+    /**
+     * getevent raw 协议中要识别的关键 token。
+     * 一次完整音量减按键产生两行：
+     *   "... 0001 0072 00000001"   ← 按下（value=1）
+     *   "... 0001 0072 00000000"   ← 抬起（value=0）
+     * 短形式 value 会被打印成 1 / 0 / 2（2=repeat）。
+     * 这里用 {@code VOL_DOWN_TYPE_CODE} = "0001 0072"} 做 type+code 定位，
+     * 再单独判断 value ≠ 0 即按下动作。
+     */
+    private static final String VOL_DOWN_TYPE_CODE = "0001 0072";
 
     private HandlerThread ioThread;
     private Handler ioHandler;
@@ -78,7 +97,7 @@ public class BackgroundAssistService extends Service {
     private long lastVolDownAt = 0L;
     private int volDownStreak = 0;
 
-    /** {@code getevent} 进程，销毁 Service 时需要 forcibly kill */
+    /** getevent 进程，销毁 Service 时需要 forcibly kill */
     private volatile Process geteventProcess;
 
     /** 供 UI（MainActivity）查询服务运行状态 */
@@ -158,12 +177,18 @@ public class BackgroundAssistService extends Service {
     }
 
     // ------------------------------------------------------------
-    // /dev/input 监听线程（核心：完全脱离 Android 窗口焦点）
+    // /dev/input 监听线程（v3：su -c getevent + raw 协议解析）
     // ------------------------------------------------------------
 
     /**
-     * 启动一个常驻线程，root 跑 {@code getevent -lt /dev/input/event*}，
-     * 从 stdout 解析出 KEY_VOLUMEDOWN 事件，识别两次连击手势。
+     * 启动常驻线程。
+     * <p>线程主体在 {@link #inputListenerLoop()} 里：
+     * <ol>
+     *   <li>{@code Runtime.exec(new String[]{"su", "-c", "getevent -q"})} 启动 root 子进程；</li>
+     *   <li>{@code su} 接管命令后挂住不退出，{@code getevent} 进入常驻监听；</li>
+     *   <li>父进程从子进程 stdout 按行读取 raw input_event；</li>
+     *   <li>命中音量减按下事件 → 累计连击，达到 2 次立刻触发流水线。</li>
+     * </ol>
      */
     private void startInputListener() {
         if (inputListenerAlive.get()) return;
@@ -174,69 +199,71 @@ public class BackgroundAssistService extends Service {
 
     private void stopInputListener() {
         Process p = geteventProcess;
-        if (p != null && p.isAlive()) {
-            p.destroyForcibly();
+        if (p != null) {
+            try {
+                p.destroyForcibly();
+            } catch (Throwable ignored) {
+            }
         }
     }
 
     /**
      * getevent 主循环。
-     * <p>
-     * 命令：
-     * <pre>
-     *   su
-     *   getevent -lt /dev/input/event* 2>&1
-     * </pre>
-     * 输出格式（带 -l -t）：
-     * <pre>
-     *   /dev/input/event4: 12345.678901  KEY_VOLUMEDOWN  DOWN
-     *   /dev/input/event4: 12345.789012  KEY_VOLUMEDOWN  UP
-     * </pre>
-     * <p>
-     * 只需要匹配 {@code KEY_VOLUMEDOWN} + {@code DOWN} 的行就能拿到每次按键的按下时刻。
+     *
+     * <p>采用 {@code Runtime.exec(String[])} 数组形式而非 {@code ProcessBuilder + stdin}，
+     * 避免 Magisk su 在 stdin EOF 时把整个 shell 收掉导致 getevent 来不及启动。
+     * 同时把 stderr 单独接到一个线程读，防止管道满导致 getevent 阻塞。</p>
      */
     private void inputListenerLoop() {
-        // 退避重试：getevent 启动失败（root 未授权等）时不要一直狂试
         int retryDelayMs = 1000;
         while (inputListenerAlive.get()) {
             Process process = null;
             BufferedReader reader = null;
+            Thread stderrDrainThread = null;
             try {
-                Log.i(TAG, "spawning getevent via su ...");
-                process = new ProcessBuilder("su").redirectErrorStream(true).start();
+                Log.i(TAG, "spawning: su -c getevent -q");
+
+                // 注意：使用数组形式（不会经过 /system/bin/sh -c 的二次解析）
+                // 这样 getevent 的所有参数都直达 su shell。
+                process = Runtime.getRuntime().exec(new String[]{
+                        "su",
+                        "-c",
+                        "getevent -q 2>/dev/null"
+                });
                 geteventProcess = process;
 
-                try (OutputStream os = process.getOutputStream()) {
-                    // -l 标签格式（输出 KEY_VOLUMEDOWN 而不是 0x72）
-                    // -t 带时间戳
-                    // 不加 -p：不打印 "add device" 行
-                    // 2>&1 把 stderr 也合到 stdout
-                    String cmd = "getevent -lt /dev/input/event* 2>&1\n";
-                    os.write(cmd.getBytes(StandardCharsets.UTF_8));
-                    os.write("exit\n".getBytes(StandardCharsets.UTF_8));
-                    os.flush();
-                }
+                // 单独起一个线程把 stderr 抽干，防止管道缓冲区满卡住 getevent。
+                stderrDrainThread = drainStreamAsync(process.getErrorStream(), "stderr");
 
-                reader = new BufferedReader(
-                        new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8));
+                InputStream stdout = process.getInputStream();
+                reader = new BufferedReader(new InputStreamReader(stdout, StandardCharsets.UTF_8));
 
                 String line;
                 while (inputListenerAlive.get() && (line = reader.readLine()) != null) {
                     handleGeteventLine(line);
                 }
             } catch (Throwable t) {
-                Log.w(TAG, "getevent loop interrupted: " + t.getClass().getSimpleName()
+                Log.w(TAG, "getevent loop crashed: " + t.getClass().getSimpleName()
                         + ": " + t.getMessage());
             } finally {
                 geteventProcess = null;
                 closeQuietly(reader);
-                if (process != null && process.isAlive()) {
-                    process.destroyForcibly();
+                if (stderrDrainThread != null) {
+                    try {
+                        stderrDrainThread.interrupt();
+                    } catch (Throwable ignored) {
+                    }
+                }
+                if (process != null) {
+                    try {
+                        process.destroyForcibly();
+                    } catch (Throwable ignored) {
+                    }
                 }
             }
 
             if (!inputListenerAlive.get()) break;
-            // 退避后重试
+
             try {
                 Thread.sleep(retryDelayMs);
             } catch (InterruptedException ie) {
@@ -249,23 +276,118 @@ public class BackgroundAssistService extends Service {
     }
 
     /**
-     * 单行解析：识别 "KEY_VOLUMEDOWN ... DOWN"。
+     * 后台抽干一个 InputStream（典型场景：getevent 的 stderr），避免缓冲区满阻塞子进程。
+     */
+    @NonNull
+    private static Thread drainStreamAsync(@NonNull InputStream in, @NonNull String tag) {
+        Thread t = new Thread(() -> {
+            byte[] buf = new byte[512];
+            try {
+                int n;
+                while (!Thread.currentThread().isInterrupted()
+                        && (n = in.read(buf)) > 0) {
+                    // 选择性记录：getevent 偶尔会向 stderr 喷 warning，不影响主逻辑
+                    if (Log.isLoggable(TAG, Log.DEBUG)) {
+                        Log.d(TAG, "[" + tag + "] " + new String(buf, 0, n, StandardCharsets.UTF_8).trim());
+                    }
+                }
+            } catch (IOException ignored) {
+                // 进程退出时 read 会抛异常，吞掉就行
+            }
+        }, "stream-drain-" + tag);
+        t.setDaemon(true);
+        t.start();
+        return t;
+    }
+
+    /**
+     * 单行解析：识别 volume-down 按下事件。
+     *
+     * <p>getevent raw 输出示例（不含 -l 标签、含 -q 静默）：</p>
+     * <pre>
+     *   add device 1: /dev/input/event4
+     *   /dev/input/event4: 0001 0072 00000001   ← 按下
+     *   /dev/input/event4: 0001 0072 00000000   ← 抬起
+     *   /dev/input/event5: 0001 0072 00000002   ← 长按 repeat
+     * </pre>
+     *
+     * <p>判定条件（不做设备节点白名单，event* 都接）：</p>
+     * <ul>
+     *   <li>行首必须是 {@code /dev/input/} 开头（过滤掉 "add device" 这种启动行）；</li>
+     *   <li>行内包含 {@code " 0001 0072"}（type=EV_KEY, code=KEY_VOLUMEDOWN）；</li>
+     *   <li>value ≠ 0：按下（1）或长按 repeat（2），抬起（0）忽略。</li>
+     * </ul>
      */
     private void handleGeteventLine(@NonNull String line) {
-        if (!line.contains(KEY_NAME)) return;
-        if (!line.contains(DOWN_TOKEN)) return;
+        // 1. 必须是 /dev/input/event* 开头的事件行，过滤掉 "add device" 这种元信息
+        if (!line.startsWith("/dev/input/")) return;
+
+        // 2. 必须包含 type+code 关键字
+        if (!line.contains(VOL_DOWN_TYPE_CODE)) return;
+
+        // 3. 提取 value（行尾最后一个 hex token）
+        String valueHex = extractTrailingHex(line);
+        if (valueHex == null) return;
+
+        int value;
+        try {
+            value = Integer.parseInt(valueHex, 16);
+        } catch (NumberFormatException e) {
+            return;
+        }
+
+        // value=0 → 抬起；value=1 → 按下；value=2 → 长按 repeat
+        // 仅按下/长按触发连击计数，抬起忽略。
+        if (value == 0) return;
+
         long now = SystemClock.elapsedRealtime();
         if (now - lastVolDownAt > TRIGGER_WINDOW_MS) {
             volDownStreak = 0;
         }
         lastVolDownAt = now;
         volDownStreak++;
-        Log.d(TAG, "VOL_DOWN_DOWN count=" + volDownStreak);
+        Log.d(TAG, "VOL_DOWN press streak=" + volDownStreak + " (value=" + value + ")");
 
         if (volDownStreak >= 2) {
             volDownStreak = 0;
-            triggerPipeline("getevent_x2");
+            triggerPipeline("getevent_voldown_x2");
         }
+    }
+
+    /**
+     * 从 getevent 输出行里提取行尾的十六进制 token。
+     * <p>支持格式：</p>
+     * <ul>
+     *   <li>{@code "... 0001 0072 00000001"} → 返回 {@code "00000001"}</li>
+     *   <li>{@code "... 0001 0072 1"}         → 返回 {@code "1"}（短形式）</li>
+     * </ul>
+     *
+     * @return 十六进制字符串（不带 0x 前缀）；解析失败返回 null
+     */
+    @Nullable
+    private static String extractTrailingHex(@NonNull String line) {
+        // 去掉尾部空白
+        int end = line.length();
+        while (end > 0 && Character.isWhitespace(line.charAt(end - 1))) {
+            end--;
+        }
+        if (end == 0) return null;
+
+        // 从 end 往前找到第一个空白（token 分隔符）
+        int start = end;
+        while (start > 0 && !Character.isWhitespace(line.charAt(start - 1))) {
+            start--;
+        }
+        if (start == end) return null;
+
+        String token = line.substring(start, end);
+        // 必须是纯十六进制字符
+        for (int i = 0; i < token.length(); i++) {
+            char c = token.charAt(i);
+            boolean ok = (c >= '0' && c <= '9') || (c >= 'a' && c <= 'f') || (c >= 'A' && c <= 'F');
+            if (!ok) return null;
+        }
+        return token;
     }
 
     // ------------------------------------------------------------
@@ -418,14 +540,14 @@ public class BackgroundAssistService extends Service {
             builder = new Notification.Builder(this, CHANNEL_ID)
                     .setSmallIcon(android.R.drawable.stat_notify_sync_noanim)
                     .setContentTitle("Assist 已就绪")
-                    .setContentText("连按 2 次音量减触发（系统级监听）")
+                    .setContentText("500ms 内连按 2 次音量减触发")
                     .setOngoing(true)
                     .setPriority(Notification.PRIORITY_MIN);
         } else {
             builder = new Notification.Builder(this)
                     .setSmallIcon(android.R.drawable.stat_notify_sync_noanim)
                     .setContentTitle("Assist 已就绪")
-                    .setContentText("连按 2 次音量减触发（系统级监听）")
+                    .setContentText("500ms 内连按 2 次音量减触发")
                     .setOngoing(true)
                     .setPriority(Notification.PRIORITY_MIN);
         }
